added frontend for MVP

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -55,6 +55,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "de9f5486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frontend-1  | \n",
+      "frontend-1  | > frontend@0.0.0 dev\n",
+      "frontend-1  | > vite --host\n",
+      "frontend-1  | \n",
+      "frontend-1  | \n",
+      "frontend-1  |   VITE v7.3.1  ready in 252 ms\n",
+      "frontend-1  | \n",
+      "frontend-1  |   ➜  Local:   http://localhost:5173/\n",
+      "frontend-1  |   ➜  Network: http://172.25.0.4:5173/\n",
+      "frontend-1  | 1:56:37 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n",
+      "frontend-1  | 1:56:38 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n",
+      "frontend-1  | 1:57:39 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n",
+      "frontend-1  | 1:57:40 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n",
+      "frontend-1  | 1:58:11 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n",
+      "frontend-1  | 1:58:12 AM [vite] http proxy error: /recipes/suggestions\n",
+      "frontend-1  | Error: connect ECONNREFUSED 127.0.0.1:8000\n",
+      "frontend-1  |     at TCPConnectWrap.afterConnect [as oncomplete] (node:net:1611:16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "docker compose logs frontend"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e14b1908",
    "metadata": {},
@@ -64,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "9ec25823",
    "metadata": {},
    "outputs": [
@@ -74,8 +119,6 @@
      "text": [
       " Network cookbook-app_default Creating \n",
       " Network cookbook-app_default Created \n",
-      " Volume cookbook-app_postgres_data Creating \n",
-      " Volume cookbook-app_postgres_data Created \n",
       " Container cookbook_db Creating \n",
       " Container cookbook_db Created \n",
       " Container cookbook-app-backend-1 Creating \n",
@@ -127,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "06e70deb",
    "metadata": {},
    "outputs": [
@@ -296,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "be565326",
    "metadata": {},
    "outputs": [
@@ -306,7 +349,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed  Time    Time    Time   Current\n",
       "                                 Dload  Upload  Total   Spent   Left   Speed\n",
-      "100   6780 100   6751 100     29 568.2k   2519                              0 100     29 570.1k   2507                              0499                              0\n"
+      "100   6780 100   6751 100     29  1.11M   5002                              0 100     29  1.11M   5041                              0             0\n"
      ]
     },
     {
